# UrbanIA

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: agents.yaml  settings.py
construcsync/: README.md
construcsync/src/agents/: impact_simulator_stakeholder_sync.py  permit_optimizer_agent.py  territory_planner_agent.py
construcsync/src/api/: main.py
construcsync/tests/: test_construcsync.py
dashboards/: AX5-ConstrucSync-Dashboard-Live.jsx  AX5-Landing.jsx  AX5-UrbanIA-Dashboard.jsx
data/cnesst/: .gitkeep  cnesst_construction_sample.json
data/mtl_sources/: .gitkeep
data/saaq/: .gitkeep  saaq_workzone_sample.json
scripts/: download_cnesst.py  download_saaq.py  seed_graph.py
src/agents/: cascade_agent.py  cnesst_lesions_agent.py  coactivity_agent.py  nudge_agent.py  saaq_workzone_agent.py  urban_flow_agent.py
src/api/: main.py
src/connectors/: cifs_connector.py  cnesst_connector.py  cycling_bluetooth_bixi.py  mtl_opendata.py  pedestrian_connector.py  saaq_connector.py  weather_connector.py
src/graph/: safety_graph.py  schema.cypher
src/models/: alert_thresholds.py  risk_profile.py  urban_risk_score.py
src/utils/: constants.py  logging_config.py
tests/: test_all.py
