[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ax5-urbania"
version = "0.1.0"
description = "Suite de sécurité prédictive urbaine par IA agentique — AX5 UrbanIA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "GenAISafety / Preventera", email = "contact@genaisafety.com"}
]
keywords = ["safety", "urban", "agentic-ai", "hse", "construction", "predictive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Preventera/UrbanIA"
Repository = "https://github.com/Preventera/UrbanIA"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
